--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
                     <div class = "card-text-center">
 
                         <div class = "card-header">
-                            <h2 class="text-center">Sign in</h2>   
+                            <h2 class="text-center">Sign In</h2>   
                         </div>
                         <div class = "card-body">
                             <div class="form-group ">
